--- a/appengine/hello-world/standard/app.yaml
+++ b/appengine/hello-world/standard/app.yaml
@@ -14,3 +14,5 @@
 # [START gae_quickstart_yaml]
 runtime: nodejs10
 # [END gae_quickstart_yaml]
+beta_settings:
+  cloud_sql_instances: ayushman-226612:asia-south1:new-db-1
